2011-02-26  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        DumpRenderTree should reset frame opener between tests.
        https://bugs.webkit.org/show_bug.cgi?id=54874

        Added clearOpener method to WebFrame.

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::clearOpener):
        * src/WebFrameImpl.h:

2011-02-26  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: rolling chromium DEPS.

        * DEPS:

2011-02-26  Bill Budge  <bbudge@chromium.org>

        Reviewed by David Levin.

        WebURLRequest, WebURLResponse properties should be passed to WebCore Layer
        https://bugs.webkit.org/show_bug.cgi?id=54489

        No tests needed. This is already tested by ui_tests, nacl_ui_tests, and nacl_sandbox_tests

        * src/WebURLRequest.cpp:
        (WebKit::WebURLRequestPrivateImpl::WebURLRequestPrivateImpl):
        (WebKit::WebURLRequest::downloadToFile):
        (WebKit::WebURLRequest::setDownloadToFile):
        * src/WebURLRequestPrivate.h:
        (WebKit::WebURLRequestPrivate::WebURLRequestPrivate):
        * src/WebURLResponse.cpp:
        (WebKit::WebURLResponsePrivateImpl::WebURLResponsePrivateImpl):
        (WebKit::WebURLResponse::downloadFilePath):
        (WebKit::WebURLResponse::setDownloadFilePath):
        * src/WebURLResponsePrivate.h:

2011-02-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r79764.
        http://trac.webkit.org/changeset/79764
        https://bugs.webkit.org/show_bug.cgi?id=55295

        "broke Chromium builds" (Requested by rniwa on #webkit).

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        * src/WebFrameImpl.h:

2011-02-26  David Dorwin  <ddorwin@chromium.org>

        Reviewed by Darin Fisher.

        Enable WebKit Full Screen API in Chromium. The element becomes the full size of the window, but the window is not yet full screen. Support is disabled by default.
